--- a/cv_chrystelle_albina.html
+++ b/cv_chrystelle_albina.html
@@ -1,216 +1,292 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Chrystelle Albina — CV</title>
-  <style>
-    :root {
-      --bg: #0f1724;
-      --card: #0b1220;
-      --muted: #9aa4b2;
-      --accent: #7dd3fc;
-      --radius: 12px;
-      font-family: Inter, system-ui, sans-serif;
-    }
-    body {
-      margin: 0;
-      background: linear-gradient(180deg, #061023, #071227);
-      color: #e6eef6;
-      transition: background 0.3s, color 0.3s;
-    }
-    .container {
-      max-width: 1000px;
-      margin: 36px auto;
-      padding: 24px;
-      display: grid;
-      grid-template-columns: 320px 1fr;
-      gap: 20px;
-    }
-    .card {
-      background: rgba(255, 255, 255, 0.02);
-      padding: 18px;
-      border-radius: var(--radius);
-      border: 1px solid rgba(255, 255, 255, 0.05);
-      transition: background 0.3s, border 0.3s;
-    }
-    h1, h2, h3, h4 { margin: 0; }
-    .section-title {
-      font-size: 13px;
-      color: var(--accent);
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      margin: 12px 0;
-    }
-    .experience, .formation { margin-bottom: 14px; cursor: pointer; }
-    .experience h4, .formation h4 { font-size: 15px; }
-    .meta { font-size: 13px; color: var(--muted); margin-top: 4px; }
-    .contacts { display: flex; flex-direction: column; gap: 6px; font-size: 14px; }
-    footer { text-align: center; color: var(--muted); font-size: 13px; margin-top: 20px; }
-    nav.actions { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px; }
-    button {
-      cursor: pointer;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 8px;
-      background: rgba(255, 255, 255, 0.05);
-      color: var(--accent);
-      font-weight: 600;
-    }
-    button:hover { background: rgba(255,255,255,0.1); }
-    @media (max-width: 880px) { .container { grid-template-columns: 1fr; } }
-    
-    /* Thème clair */
-    body.light { background: #fdfdfd; color: #222; }
-    body.light .card { background: #fff; border: 1px solid #ddd; }
-    body.light .section-title { color: #0369a1; }
-    body.light footer { color: #555; }
-  </style>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-</head>
-<body>
-  <div class="container">
-    <!-- Colonne gauche -->
-    <aside class="card">
-      <h1>Chrystelle Albina</h1>
-      <p class="meta">23 Avenue Danielle Casanova<br>38130 Échirolles</p>
-      <div class="contacts">
-        <div>Email : <a href="mailto:albina.chrystelle@gmail.com">albina.chrystelle@gmail.com</a></div>
-        <div>Téléphone : 06 33 68 49 19</div>
-        <div>Portfolio : <a href="https://albinaportfolio.netlify.app" target="_blank">albinaportfolio.netlify.app</a></div>
-      </div>
-
-      <div class="section-title">Objectif Professionnel</div>
-      <p>À la recherche d’un stage en développement web pour appliquer mes compétences actuelles et futures et intégrer une équipe de passionné·e·s.</p>
-      <p class="meta">Compétences techniques : HTML5, CSS3, JavaScript, UI/UX, Figma, PHP, NoSQL, MySQL, React, Bootstrap, GitHub, VSCode, Responsive design, Web mobile First, Agile.</p>
-
-      <div class="section-title">Compétences professionnelles</div>
-      <ul>
-        <li>Documentation technique</li>
-        <li>Méthode de production</li>
-        <li>Programmation</li>
-        <li>Contrôle qualité et conformité</li>
-      </ul>
-
-      <div class="section-title">En plus</div>
-      <p>Travail en équipe/solo — Curieuse — Passionnée — Rêveuse — Humanitaire</p>
-
-      <nav class="actions">
-        <button id="downloadBtn">Télécharger HTML</button>
-        <button id="printBtn">Imprimer</button>
-        <button id="pdfBtn">Exporter PDF</button>
-        <button id="themeBtn">Changer Thème</button>
-      </nav>
-    </aside>
-
-    <!-- Colonne droite -->
-    <main id="cvContent">
-      <section class="card">
-        <div class="section-title">Formations</div>
-        <div class="formation">
-          <h4>2025 — Certificat Sauveteur Secouriste</h4>
-          <p class="meta">CRF</p>
-        </div>
-        <div class="formation">
-          <h4>2025 — TP Développeur Web, Web Mobile</h4>
-          <p class="meta">Nepsod</p>
-        </div>
-        <div class="formation">
-          <h4>2015 — TP Soudage Industriel</h4>
-          <p class="meta">AFPA</p>
-        </div>
-        <div class="formation">
-          <h4>2013 — CQP Soudage Industriel</h4>
-          <p class="meta">GRETA</p>
-        </div>
-        <div class="formation">
-          <h4>1997 — BEP Hôtellerie Restauration</h4>
-          <p class="meta">Clos d’Or</p>
-        </div>
-      </section>
-
-      <section class="card">
-        <div class="section-title">Expériences professionnelles</div>
-        <div class="experience">
-          <h4>2023/24 — MinMaxMedical</h4>
-          <p class="meta">Opératrice technique électronique R&D</p>
-        </div>
-        <div class="experience">
-          <h4>2023 — Verkors</h4>
-          <p class="meta">Opératrice Batterie</p>
-        </div>
-        <div class="experience">
-          <h4>2022 — Minitubes</h4>
-          <p class="meta">Technicienne Contrôle qualité final</p>
-        </div>
-        <div class="experience">
-          <h4>2020 — Device Alab</h4>
-          <p class="meta">Technicienne qualité monteuse</p>
-        </div>
-        <div class="experience">
-          <h4>2019 — Petzl</h4>
-          <p class="meta">Technicienne Contrôle qualité entrée</p>
-        </div>
-        <div class="experience">
-          <h4>2018 — Radiall</h4>
-          <p class="meta">Opératrice braseuse contrôle qualité</p>
-        </div>
-      </section>
-
-      <footer>
-        <p>CV — Chrystelle Albina — Développeuse Web & Web Mobile</p>
-      </footer>
-    </main>
-  </div>
-
-  <script>
-    // Télécharger le CV en HTML
-    document.getElementById('downloadBtn').addEventListener('click', function(){
-      const html = '<!doctype html>\n' + document.documentElement.outerHTML;
-      const blob = new Blob([html], {type: 'text/html'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = 'cv_chrystelle_albina.html';
-      a.click();
-      URL.revokeObjectURL(url);
-    });
-
-    // Imprimer le CV
-    document.getElementById('printBtn').addEventListener('click', function(){
-      window.print();
-    });
-
-    // Exporter en PDF avec html2canvas + jsPDF
-    document.getElementById('pdfBtn').addEventListener('click', function(){
-      const { jsPDF } = window.jspdf;
-      const cv = document.getElementById('cvContent');
-      html2canvas(cv).then(canvas => {
-        const imgData = canvas.toDataURL('image/png');
-        const pdf = new jsPDF('p', 'mm', 'a4');
-        const imgProps = pdf.getImageProperties(imgData);
-        const pdfWidth = pdf.internal.pageSize.getWidth();
-        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-        pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
-        pdf.save('cv_chrystelle_albina.pdf');
-      });
-    });
-
-    // Changer de thème (clair/sombre)
-    document.getElementById('themeBtn').addEventListener('click', function(){
-      document.body.classList.toggle('light');
-    });
-
-    // Repli/affichage des expériences et formations
-    document.querySelectorAll('.experience, .formation').forEach(function(el){
-      el.addEventListener('click', function(){
-        const meta = this.querySelector('.meta');
-        if(meta){
-          meta.style.display = (meta.style.display === 'none') ? 'block' : 'none';
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Chrystelle Albina — CV</title>
+    <style>
+      :root {
+        --bg: #0f1724;
+        --card: #0b1220;
+        --muted: #9aa4b2;
+        --accent: #7dd3fc;
+        --radius: 12px;
+        font-family: Inter, system-ui, sans-serif;
+      }
+      body {
+        margin: 0;
+        background: linear-gradient(180deg, #061023, #071227);
+        color: #e6eef6;
+        transition: background 0.3s, color 0.3s;
+      }
+      .container {
+        max-width: 1000px;
+        margin: 36px auto;
+        padding: 24px;
+        display: grid;
+        grid-template-columns: 320px 1fr;
+        gap: 20px;
+      }
+      .card {
+        background: rgba(255, 255, 255, 0.02);
+        padding: 18px;
+        border-radius: var(--radius);
+        border: 1px solid rgba(255, 255, 255, 0.05);
+        transition: background 0.3s, border 0.3s;
+      }
+      h1,
+      h2,
+      h3,
+      h4 {
+        margin: 0;
+      }
+      .section-title {
+        font-size: 13px;
+        color: var(--accent);
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        margin: 12px 0;
+      }
+      .experience,
+      .formation {
+        margin-bottom: 14px;
+        cursor: pointer;
+      }
+      .experience h4,
+      .formation h4 {
+        font-size: 15px;
+      }
+      .meta {
+        font-size: 13px;
+        color: var(--muted);
+        margin-top: 4px;
+      }
+      .contacts {
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+        font-size: 14px;
+      }
+      footer {
+        text-align: center;
+        color: var(--muted);
+        font-size: 13px;
+        margin-top: 20px;
+      }
+      nav.actions {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        margin-top: 20px;
+      }
+      button {
+        cursor: pointer;
+        border: none;
+        padding: 8px 12px;
+        border-radius: 8px;
+        background: rgba(255, 255, 255, 0.05);
+        color: var(--accent);
+        font-weight: 600;
+      }
+      button:hover {
+        background: rgba(255, 255, 255, 0.1);
+      }
+      @media (max-width: 880px) {
+        .container {
+          grid-template-columns: 1fr;
         }
+      }
+
+      /* Thème clair */
+      body.light {
+        background: #fdfdfd;
+        color: #222;
+      }
+      body.light .card {
+        background: #fff;
+        border: 1px solid #ddd;
+      }
+      body.light .section-title {
+        color: #0369a1;
+      }
+      body.light footer {
+        color: #555;
+      }
+    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <!-- Colonne gauche -->
+      <aside class="card">
+        <h1>Chrystelle Albina</h1>
+        <p class="meta">23 Avenue Danielle Casanova<br />38130 Échirolles</p>
+        <div class="contacts">
+          <div>
+            Email :
+            <a href="mailto:albina.chrystelle@gmail.com"
+              >albina.chrystelle@gmail.com</a
+            >
+          </div>
+          <div>Téléphone : 06 33 68 49 19</div>
+          <div>
+            Portfolio :
+            <a href="https://albinaportfolio.netlify.app" target="_blank"
+              >albinaportfolio.netlify.app</a
+            >
+          </div>
+        </div>
+
+        <div class="section-title">Objectif Professionnel</div>
+        <p>
+          À la recherche d’un stage en développement web pour appliquer mes
+          compétences actuelles et futures et intégrer une équipe de
+          passionné·e·s.
+        </p>
+        <p class="meta">
+          Compétences techniques : HTML5, CSS3, JavaScript, UI/UX, Figma, PHP,
+          NoSQL, MySQL, React, Bootstrap, GitHub, VSCode, Responsive design, Web
+          mobile First, Agile.
+        </p>
+
+        <div class="section-title">Compétences professionnelles</div>
+        <ul>
+          <li>Documentation technique</li>
+          <li>Méthode de production</li>
+          <li>Programmation</li>
+          <li>Contrôle qualité et conformité</li>
+        </ul>
+
+        <div class="section-title">En plus</div>
+        <p>
+          Travail en équipe/solo — Curieuse — Passionnée — Rêveuse — Humanitaire
+        </p>
+
+        <nav class="actions">
+          <button id="downloadBtn">Télécharger HTML</button>
+          <button id="printBtn">Imprimer</button>
+          <button id="pdfBtn">Exporter PDF</button>
+          <button id="themeBtn">Changer Thème</button>
+        </nav>
+      </aside>
+
+      <!-- Colonne droite -->
+      <main id="cvContent">
+        <section class="card">
+          <div class="section-title">Formations</div>
+          <div class="formation">
+            <h4>2025 — Certificat Sauveteur Secouriste</h4>
+            <p class="meta">CRF</p>
+          </div>
+          <div class="formation">
+            <h4>2025 — TP Développeur Web, Web Mobile</h4>
+            <p class="meta">Nepsod</p>
+          </div>
+          <div class="formation">
+            <h4>2015 — TP Soudage Industriel</h4>
+            <p class="meta">AFPA</p>
+          </div>
+          <div class="formation">
+            <h4>2013 — CQP Soudage Industriel</h4>
+            <p class="meta">GRETA</p>
+          </div>
+          <div class="formation">
+            <h4>1997 — BEP Hôtellerie Restauration</h4>
+            <p class="meta">Clos d’Or</p>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="section-title">Expériences professionnelles</div>
+          <div class="experience">
+            <h4>2023/24 — MinMaxMedical</h4>
+            <p class="meta">Opératrice technique électronique R&D</p>
+          </div>
+          <div class="experience">
+            <h4>2023 — Verkors</h4>
+            <p class="meta">Opératrice Batterie</p>
+          </div>
+          <div class="experience">
+            <h4>2022 — Minitubes</h4>
+            <p class="meta">Technicienne Contrôle qualité final</p>
+          </div>
+          <div class="experience">
+            <h4>2020 — Device Alab</h4>
+            <p class="meta">Technicienne qualité monteuse</p>
+          </div>
+          <div class="experience">
+            <h4>2019 — Petzl</h4>
+            <p class="meta">Technicienne Contrôle qualité entrée</p>
+          </div>
+          <div class="experience">
+            <h4>2018 — Radiall</h4>
+            <p class="meta">Opératrice braseuse contrôle qualité</p>
+          </div>
+        </section>
+
+        <footer>
+          <p>CV — Chrystelle Albina — Développeuse Web & Web Mobile</p>
+        </footer>
+      </main>
+    </div>
+
+    <script>
+      // Télécharger le CV en HTML
+      document
+        .getElementById("downloadBtn")
+        .addEventListener("click", function () {
+          const html = "<!doctype html>\n" + document.documentElement.outerHTML;
+          const blob = new Blob([html], { type: "text/html" });
+          const url = URL.createObjectURL(blob);
+          const a = document.createElement("a");
+          a.href = url;
+          a.download = "cv_chrystelle_albina.html";
+          a.click();
+          URL.revokeObjectURL(url);
+        });
+
+      // Imprimer le CV
+      document
+        .getElementById("printBtn")
+        .addEventListener("click", function () {
+          window.print();
+        });
+
+      // Exporter en PDF avec html2canvas + jsPDF
+      document.getElementById("pdfBtn").addEventListener("click", function () {
+        const { jsPDF } = window.jspdf;
+        const cv = document.getElementById("cvContent");
+        html2canvas(cv).then((canvas) => {
+          const imgData = canvas.toDataURL("image/png");
+          const pdf = new jsPDF("p", "mm", "a4");
+          const imgProps = pdf.getImageProperties(imgData);
+          const pdfWidth = pdf.internal.pageSize.getWidth();
+          const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+          pdf.addImage(imgData, "PNG", 0, 0, pdfWidth, pdfHeight);
+          pdf.save("cv_chrystelle_albina.pdf");
+        });
       });
-    });
-  </script>
-</body>
+
+      // Changer de thème (clair/sombre)
+      document
+        .getElementById("themeBtn")
+        .addEventListener("click", function () {
+          document.body.classList.toggle("light");
+        });
+
+      // Repli/affichage des expériences et formations
+      document
+        .querySelectorAll(".experience, .formation")
+        .forEach(function (el) {
+          el.addEventListener("click", function () {
+            const meta = this.querySelector(".meta");
+            if (meta) {
+              meta.style.display =
+                meta.style.display === "none" ? "block" : "none";
+            }
+          });
+        });
+    </script>
+  </body>
 </html>
